--- a/JavaScriptCardGameProject/index.html
+++ b/JavaScriptCardGameProject/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>카드게임</title>
+    <title>하수스톤</title>
     <body onresize="parent.resizeTo(640,480)" onload="parent.resizeTo(640,480)"></body>
     <style>
     </style>
